# Guitar-VST

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
Docs/: UI-Resources.txt
Source/: AmpProcessor.cpp  AmpProcessor.h  EQProcessor.cpp  EQProcessor.h  IRLoader.cpp  IRLoader.h  KnobRangeSet.h  KnobRangesDialog.cpp  KnobRangesDialog.h  NeuralAmpProcessor.cpp  NeuralAmpProcessor.h  PitchShifter.cpp  PitchShifter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SectionColourSet.h  SectionColoursDialog.cpp  SectionColoursDialog.h  StageProcessor.cpp  StageProcessor.h  Tuner.cpp  Tuner.h
Source/CloudSeed/: Parameters.h
Source/CloudSeed/DSP/: ReverbController.h
